Se agregaron mensajes mas bonitos

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,19 @@ header h1{
     font-size: 4rem;
     text-align: center;
 }
+
+section{
+    width: 400px;
+    margin: 0 auto;
+}
+
+section article{
+    background-color: #fff;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    padding: 0.25rem 0;
+}
+
+section article h2, section article p{
+    margin: 1rem;
+}
